--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-native-firebase/auth": "^13.0.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@types/styled-components": "^5.1.15",
+    "@types/styled-components-react-native": "^5.1.3",
     "expo": "~43.0.2",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
